--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     color: #252422;
     background-color: #f4f4f4;
 }
-.header__container{
+.header{
     height: 100vh;
     background-image: url('image/scooter.png');
     padding: 35px;
@@ -18,7 +18,7 @@ body{
     padding-top: 20px;
     color: #f4f4f4;
 }
-.nav__basic{
+.logo{
     font-size: 25px;
     font-weight: bolder;
     text-transform: uppercase;
@@ -26,7 +26,7 @@ body{
 
     display: inline-block;
 }
-.nav__item{
+.item{
     display: inline-block;
     /* font-weight: bold; */
     font-size: 14px;
